Feat/mybids (#24)
* feat: add bid model

* feat: repository for bidder bids

* feat: get bidder bids endpoint

* feat: making bidder bids route

* feat: bid model

* feat:swagger update
